# genai-contract-generator

./: .gitignore  README.md  config.yaml  pyproject.toml
api/: main.py
api/middleware/: rate_limiter.py
api/routes/: contracts.py  health.py
core/: contract_generator.py  contract_validator.py  prompt_builder.py  schema_parser.py
examples/: expected_output_orders.yaml  input_ddl_orders.sql  input_ddl_sessions.sql  input_json_schema_products.json
integrations/: anthropic_client.py  datacontract_cli.py
models/: input_models.py  output_models.py
tests/: test_api.py  test_contract_generator.py  test_prompt_builder.py  test_schema_parser.py
ui/: index.html
